enahnce datatype with validation

--- a/jpa-examples/src/main/webapp/datatype/simpleDataType-form.zul
+++ b/jpa-examples/src/main/webapp/datatype/simpleDataType-form.zul
@@ -2,76 +2,117 @@
 <zk>
 	<window apply="org.zkoss.bind.BindComposer" title="Direct"
 		viewModel="@id('vm') @init('org.zkoss.jpa.examples.datatype.SimpleDataTypeViewModel')"
-		border="normal" hflex="1" vflex="1" contentStyle="overflow:auto">
-		<hbox>
+		validationMessages="@id('vmsgs')" border="normal" hflex="1" vflex="1"
+		contentStyle="overflow:auto">
+		<hbox dt="@ref(vm.selectedDataType)">
 			<vbox>
 				<listbox model="@bind(vm.availableDataTypes)"
-					width="300px" selectedItem="@bind(vm.selectedDataType)">
+					width="300px" selectedItem="@bind(dt)">
 					<template name="model">
 						<listitem>
 							<listcell label="@load(each.title)" />
 						</listitem>
 					</template>
 				</listbox>
+				<hbox>
+					<button label="Create" onClick="@command('create')" />
+				</hbox>
 			</vbox>
-			<window title="editable result" visible="@bind(not empty vm.selectedDataType)" border="normal" width="300px"> 
+			<window title="editable result"
+				visible="@bind(not empty dt)" border="normal" width="400px">
 				<vbox hflex="1">
-					<label value="@bind(vm.selectedDataType.title)" />
-					<grid form="@id('fx') @load(vm.selectedDataType) @save(vm.selectedDataType,before='update')">
+					<label value="@bind(dt.title)" />
+					<grid
+						form="@id('fx') @load(dt) @save(dt,before='update') @validator('formBeanValidator',prefix='fx_')">
 						<columns>
 							<column hflex="min" />
 							<column />
+							<column />
 						</columns>
 						<rows>
-							<row>String
+							<row>
+								String
 								<textbox hflex="1"
-									value="@bind(fx.typeString)" />
+									value="@bind(fx.typeString) @save(fx.typeString,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeString'])" style="color:red" />
 							</row>
-							<row>Boolean
+							<row>
+								Boolean
 								<checkbox
-									checked="@bind(fx.typeBoolean)" />
+									checked="@bind(fx.typeBoolean) @save(fx.typeBoolean,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeBoolean'])" style="color:red" />
 							</row>
-							<row>Integer
-								<intbox  hflex="1"
-									value="@bind(fx.typeInteger)" />
+							<row>
+								Integer
+								<intbox hflex="1"
+									value="@bind(fx.typeInteger) @save(fx.typeInteger,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeInteger'])" style="color:red" />
 							</row>
-							<row>Long
-								<longbox  hflex="1"
-									value="@bind(fx.typeLong)" />
+							<row>
+								Long
+								<longbox hflex="1"
+									value="@bind(fx.typeLong) @save(fx.typeLong,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeLong'])" style="color:red" />
 							</row>
-							<row>Double
-								<doublebox  hflex="1"
-									value="@bind(fx.typeDouble)" />
+							<row>
+								Double
+								<doublebox hflex="1"
+									value="@bind(fx.typeDouble) @save(fx.typeDouble,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeDouble'])" style="color:red" />
 							</row>
-							<row>Float
-								<doublebox  hflex="1"
-									value="@bind(fx.typeFloat)" />
+							<row>
+								Float
+								<doublebox hflex="1"
+									value="@bind(fx.typeFloat) @save(fx.typeFloat,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeFloat'])" style="color:red" />
 							</row>
-							<row>BigDecimal
-								<decimalbox  hflex="1"
-									value="@bind(fx.typeBigDecimal)" />
+							<row>
+								BigDecimal
+								<decimalbox hflex="1"
+									value="@bind(fx.typeBigDecimal) @save(fx.typeBigDecimal,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeBigDecimal'])" style="color:red" />
 							</row>
-							<row>Date
-								<datebox format="yyyyMMdd"  hflex="1"
-									value="@bind(fx.typeDate)" />
+							<row>
+								Date
+								<datebox format="yyyyMMdd" hflex="1"
+									value="@bind(fx.typeDate) @save(fx.typeDate,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeDate'])" style="color:red" />
 							</row>
-							<row>Time
-								<timebox format="HH:mm"  hflex="1"
-									value="@bind(fx.typeTime)" />
+							<row>
+								Time
+								<timebox format="HH:mm" hflex="1"
+									value="@bind(fx.typeTime) @save(fx.typeTime,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeTime'])" style="color:red" />
 							</row>
-							<row>DateTime
-								<datebox format="yyyyMMdd HH:mm" hflex="1"
-									value="@bind(fx.typeDateTime)" />
+							<row>
+								DateTime
+								<datebox format="yyyyMMdd HH:mm"
+									hflex="1"
+									value="@bind(fx.typeDateTime) @save(fx.typeDateTime,before='update')" />
+								<label
+									value="@bind(vmsgs['fx_typeDateTime'])" style="color:red" />
 							</row>
-							<row>Emnu
-								<radiogroup
+							<row>
+								Enum
+								<radiogroup id="rg"
 									model="@init(fn:toClass('org.zkoss.jpa.examples.entity.AEnum'))"
-									selectedItem="@bind(fx.typeEnum)">
+									selectedItem="@bind(fx.typeEnum) @save(fx.typeEnum,before='update')">
 									<template name="model">
 										<radio
 											label="@bind(each.label)" />
 									</template>
 								</radiogroup>
+								<label
+									value="@bind(vmsgs['fx_typeEnum'])" style="color:red" />
 							</row>
 						</rows>
 					</grid>
@@ -80,64 +121,61 @@
 						<button label="update"
 							onClick="@command('update')" />
 						<button label="reload"
-							onClick="@command('reload')" />
+							disabled="@bind(empty fx.id)" onClick="@command('reload')" />
 					</hlayout>
 				</vbox>
-				</window>
-				<window title="readonly result" visible="@bind(not empty vm.selectedDataType)" border="normal" width="200px">
+			</window>
+			<window title="readonly result"
+				visible="@bind(not empty dt)" border="normal" width="200px">
 				<vbox hflex="1">
-					<label value="@bind(vm.selectedDataType.title)" />
+					<label value="@bind(dt.title)" />
 					<grid>
 						<columns>
 							<column />
 						</columns>
 						<rows>
 							<row>
-								<textbox  hflex="1"
-									value="@load(vm.selectedDataType.typeString)" readonly="true" />
+								<textbox hflex="1"
+									value="@load(dt.typeString)" readonly="true" />
 							</row>
 							<row>
-								<checkbox 
-									checked="@load(vm.selectedDataType.typeBoolean)"
-									disabled="true" />
+								<checkbox
+									checked="@load(dt.typeBoolean)" disabled="true" />
 							</row>
 							<row>
-								<intbox  hflex="1"
-									value="@load(vm.selectedDataType.typeInteger)" readonly="true" />
+								<intbox hflex="1"
+									value="@load(dt.typeInteger)" readonly="true" />
 							</row>
 							<row>
-								<longbox  hflex="1"
-									value="@load(vm.selectedDataType.typeLong)" readonly="true" />
+								<longbox hflex="1"
+									value="@load(dt.typeLong)" readonly="true" />
 							</row>
 							<row>
-								<doublebox  hflex="1"
-									value="@load(vm.selectedDataType.typeDouble)" readonly="true" />
+								<doublebox hflex="1"
+									value="@load(dt.typeDouble)" readonly="true" />
 							</row>
 							<row>
-								<doublebox  hflex="1"
-									value="@load(vm.selectedDataType.typeFloat)" readonly="true" />
+								<doublebox hflex="1"
+									value="@load(dt.typeFloat)" readonly="true" />
 							</row>
 							<row>
-								<decimalbox  hflex="1"
-									value="@load(vm.selectedDataType.typeBigDecimal)"
-									readonly="true" />
+								<decimalbox hflex="1"
+									value="@load(dt.typeBigDecimal)" readonly="true" />
 							</row>
 							<row>
-								<datebox format="yyyyMMdd"  hflex="1"
-									value="@load(vm.selectedDataType.typeDate)" disabled="true" />
+								<datebox format="yyyyMMdd" hflex="1"
+									value="@load(dt.typeDate)" readonly="true" />
 							</row>
 							<row>
-								<timebox format="HH:mm"  hflex="1"
-									value="@load(vm.selectedDataType.typeTime)" disabled="true" />
+								<timebox format="HH:mm" hflex="1"
+									value="@load(dt.typeTime)" readonly="true" />
 							</row>
 							<row>
-								<datebox format="yyyyMMdd HH:mm"  hflex="1"
-									value="@load(vm.selectedDataType.typeDateTime)"
-									disabled="true" />
+								<datebox format="yyyyMMdd HH:mm"
+									hflex="1" value="@load(dt.typeDateTime)" readonly="true" />
 							</row>
 							<row>
-								<label
-									value="@load(vm.selectedDataType.typeEnum)" />
+								<label value="@load(dt.typeEnum)" />
 							</row>
 						</rows>
 					</grid>
