--- a/jpa-examples/src/main/webapp/m2m/item2Cat-form.zul
+++ b/jpa-examples/src/main/webapp/m2m/item2Cat-form.zul
@@ -17,7 +17,7 @@
 			<vbox visible="@bind(not empty vm.selectedItem)" form="@id('fx') @load(vm.selectedItem) @save(vm.selectedItem,before='update')">
 				<textbox value="@bind(fx.name)" />
 				<listbox model="@bind(vm.availableCategories)"
-					selectedItems="@bind(fx.categories)" multiple="true"
+					selectedItems="@bind(fx.categories)"
 					checkmark="true">
 					<template name="model">
 						<listitem>
