--- a/jpa-examples/src/main/webapp/tree/live/rodNodeUnitTree.zul
+++ b/jpa-examples/src/main/webapp/tree/live/rodNodeUnitTree.zul
@@ -1,15 +1,11 @@
 <zk>
 	<style>
-	.empty .z-treecell-cnt{
-		font-style:italic;
-		color:blue;
-	}
 	.empty .z-tree-ico{
 		background-image:none;
 	}
 	</style>
 	<borderlayout apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('org.zkoss.jpa.examples.tree.rod.RodNodeUnitTreeViewModel')"
+		viewModel="@id('vm') @init('org.zkoss.jpa.examples.tree.live.RodNodeUnitTreeViewModel')"
 		hflex="1" vflex="1">
 		<west flex="true" width="300px">
 			<vbox width="200px">
