--- a/jpa-examples/src/main/webapp/m2m/item2Cat.zul
+++ b/jpa-examples/src/main/webapp/m2m/item2Cat.zul
@@ -16,7 +16,7 @@
 		
 			<vbox visible="@bind(not empty vm.selectedItem)">
 				<textbox value="@bind(vm.selectedItem.name)" />
-				<listbox model="@bind(vm.availableCategories)"
+				<listbox model="@bind(vm.availableCategories)" rows="10"
 					selectedItems="@bind(vm.selectedItem.categories)"
 					checkmark="true">
 					<template name="model">
